# armv7m-intrinsics

./: .editorconfig  .gitattributes  CMakeLists.txt  README.md
.github/: CODEOWNERS
include/armv7m-intrinsics/: barriers.hpp  bits.hpp  exclusive.hpp  hints.hpp  interrupts.hpp  reverse.hpp  saturation.hpp  svc.hpp
